<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.vitaliy.mazeproject.InfoActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="365dp"
            android:layout_height="128dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/viev1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/Create"
                android:textSize="17sp" />

            <Button
                android:id="@+id/button"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Valish" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="362dp"
            android:layout_height="147dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/msk"
                android:textSize="20sp" />

            <Button
                android:id="@+id/MusicAuthor"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/Musc_author" />

            <Button
                android:id="@+id/share"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/share" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
